# us-stock-index-tracker

./: .gitignore  Dockerfile  PRODUCTION_NOTES.md  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/: routes.py
src/app/db/: __init__.py  database.py  schema.sql
src/app/db/repositories/: base_repository.py  duckdb_repository.py
src/app/jobs/data/: ingestion_manager.py
src/app/jobs/data/adapters/: base.py  polygon_adapter.py
src/app/jobs/data/fetchers/: base.py  polygon_fetcher.py
src/app/jobs/data/models/: stock_record.py  ticker.py
src/app/jobs/data/stores/: base.py  duckdb.py
src/app/services/: exporter.py  index_builder.py  performance.py
src/app/utils/: cache.py  date_utils.py
